<resources>
    <string name="app_name">友信</string>
    <string name="default_sign">友信 连接你我</string>
    <!--登陆页-->
    <string name="login_edit_account_hint">手机号</string>
    <string name="login_edit_password_hint">密码</string>
    <string name="login_button_text">登 录</string>
    <string name="login_not_account_hints">是不是还没有账号呢？</string>
    <string name="login_sign_btn_text">注册账号</string>
    <string name="login_not_account_toast">请输入账号</string>
    <string name="login_not_password_toast">请输入密码</string>
    <string name="login_connect_error_toast">无网络连接！</string>
    <string name="login_qq_login_text">QQ登录</string>
    <string name="login_wechat_login_text">微信登录</string>
    <string name="login_weibo_login_text">微博登录</string>
    <!--注册页-->
    <string name="register_account_hint">请输入账号</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_button_text">注册</string>
    <string name="register_input_phone_hint">请确认您的国家或地区，并输入您的手机号码。</string>
    <string name="register_input_number_edit_hint">请输入你的账号</string>
    <string name="register_send_code_btn_text">确认并下一步</string>
    <string name="register_submit_btn_text">提 交</string>
    <string name="register_input_pwd_hint">请输入您的密码，长度不少于6位。</string>
    <string name="register_input_pwd_edit_hint">请输入你的密码</string>
    <string name="register_checked_pwd_edit_hint">请确认你的密码</string>
    <string name="register_input_code_hint">请填写验证码</string>
    <string name="register_two_input_pwd_error_toast">两次密码输入不符！</string>
    <string name="register_verificationCode_error_toast">验证码输入错误！</string>
    <!--Fragment主页切换窗口-->
    <string name="main_chat_fragment_title">聊天</string>
    <string name="main_contacts_fragment_title">联系人</string>
    <string name="main_function_fragment_title">朋友圈</string>
    <string name="main_setting_fragment_title">设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_send_me_title">开发者留言</string>
    <string name="main_send_me_content">如果您在使用本App时出现任何问题或者想提出您宝贵的意见,请联系我\nQQ号是806869597</string>
    <!--ChatActivity聊天页面-->
    <string name="chat_send_btn_text">发送</string>
    <string name="chat_function_img_btn_text">图册</string>
    <string name="chat_function_media_btn_text">视频</string>
    <string name="chat_function_file_btn_text">文件</string>
    <string name="chat_function_location_btn_text">位置</string>
    <!--ContactFragment联系人窗口-->
    <string name="contact_add_friend_text">添加新的朋友</string>
    <string name="contact_ground_text">我的群组</string>
    <string name="contact_fwh_text">服务号</string>
    <array name="contact_long_function_array">
        <item>发起会话</item>
        <item>查看资料</item>
        <item>加入黑名单</item>
        <item>移出好友</item>
    </array>
    <string name="contact_add_ok_black_port_toast">加入黑名单成功</string>
    <string name="contact_add_error_black_port_toast">加入黑名单失败</string>
    <string name="contact_del_ok_toast">删除好友成功</string>
    <string name="contact_del_error_toast">删除好友失败</string>
    <!--搜索好友-->
    <string name="newfriend_edit_hint">搜索</string>
    <string name="newfriend_qr_btn_text">扫一扫二维码</string>
    <string name="newfriend_contacts_btn_text">添加群组</string>
    <string name="newfriend_not_edit_hint">请输入手机号码再查找</string>
    <string name="newfriend_not_found_info_hint">没有找到相关用户</string>
    <string name="newfriend_add_friend_text">添 加</string>
    <string name="newfriend_yes_add_friend_text">同意</string>
    <string name="newfriend_no_add_friend_text">拒绝</string>
    <!--设置Fragment-->
    <string name="setting_loginout_text">退出登录</string>
    <string name="setting_loginouting_hint">帐号正在退出中...</string>
    <string name="setting_loginout_error_hint">帐号退出失败</string>
    <!--我的群组-->
    <string name="group_title_text">群组</string>
    <string name="group_member_text">成员</string>
    <!--侧滑按钮-->
    <string name="drawer_function_chat_text">会话</string>
    <string name="drawer_function_contacts_text">联系人</string>
    <string name="drawer_function_qrcode_text">我的二维码</string>
    <string name="drawer_function_cloud_text">I Cloud</string>
    <string name="drawer_function_share_text">分享</string>
    <string name="drawer_function_setting_text">设置</string>
    <!--服务号-->
    <string name="fwh_title_text">服务号</string>
    <string name="fwh_rebot_chat_text">娜柯酱的红茶小屋</string>
    <string name="fwh_rebot_chat_title">贴心管家娜柯酱</string>
    <!--个人中心资料编辑-->
    <string name="personal_info_image_text">头像</string>
    <string name="personal_info_nickname_text">昵称</string>
    <string name="personal_info_sex_text">性别</string>
    <string name="personal_info_sign_text">签名</string>
    <string name="personal_info_submit_text">提交</string>
    <string name="personal_info_title_text">资料设置</string>
    <!--我的二维码-->
    <string name="qrcode_title">我的二维码</string>
    <string name="qrcode_hint">扫一扫上面的二维码图案添加我为好友哦</string>
    <string-array name="country_name_list">
        <item>+86</item>

    </string-array>
    <string-array name="chat_user_list_text">
        <item>置顶聊天</item>
        <item>查看资料</item>
        <item>删除会话</item>
    </string-array>
    <string-array name="chat_user_group_text">
        <item>查看资料</item>
        <item>删除会话</item>
    </string-array>
    <string-array name="chat_header_text">
        <item>取消置顶</item>
        <item>查看资料</item>
    </string-array>
    <!-- QR -->
    <string name="scan_text">将二维码置于框内即可自动扫描</string>
</resources>
