<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    tools:context=".SignActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_input_phone_hint"/>
    <EditText
        android:id="@+id/sign_input_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/register_input_number_edit_hint"
        android:layout_marginTop="5dp"
        android:inputType="phone"/>
    <view.RippleView
        android:id="@+id/sign_send_btn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_not_btn_shape"
        app:rv_type="rectangle"
        android:elevation="2dp"
        >
        <TextView
            android:id="@+id/sign_get_button_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_send_code_btn_text"
            android:gravity="center"
            android:textSize="@dimen/main_text_size"/>
    </view.RippleView>
</LinearLayout>