<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="235dp"
    android:theme="@style/NoTitleActionStyle"
    >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/login_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/login_edit_account_hint"
            android:textSize="@dimen/main_text_size"
            android:textColorHint="@color/main_text_hint_color"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username_layout"
        android:layout_marginTop="25dp"
        >
        <EditText
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_edit_password_hint"
            android:textSize="@dimen/main_text_size"
            android:textColorHint="@color/main_text_hint_color"
            />
    </android.support.design.widget.TextInputLayout>
    <view.RippleView
        android:id="@+id/login_ripple_button"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="35dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_not_btn_shape"
        android:elevation="2dp"
        android:layout_margin="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_button_text"
            android:textSize="@dimen/main_text_size"/>
    </view.RippleView>
</RelativeLayout>