<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".NewFriendActivity"
    android:background="@color/main_fragment_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:id="@+id/newfriend_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                android:background="@color/main_style_color"
                android:elevation="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">
                    <EditText
                        android:id="@+id/newfriend_edit"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:hint="@string/newfriend_edit_hint"
                        android:background="#0000"
                        android:textSize="19sp"
                        android:textColor="#ffffff"
                        android:textColorHint="#B2ffffff"
                        android:gravity="center_vertical"
                        android:maxLength="12"
                        android:imeOptions="actionDone"
                        />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:id="@+id/newfriend_qr_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_center_focus_weak_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newfriend_qr_btn_text"
                    android:textSize="@dimen/main_text_size"
                    android:textColor="#000"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/newfriend_add_contacts_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_group_black_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newfriend_contacts_btn_text"
                    android:textSize="@dimen/main_text_size"
                    android:textColor="#000"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/newfriend_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/search_snackbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>