<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PersonalEditInfoActivity"
    android:background="@color/main_fragment_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/main_style_color"
            app:theme="@style/AppTheme.PopupOverlay">
        </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:id="@+id/personal_info_image_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/personal_info_btn_shape"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_image_text"
                android:textSize="@dimen/main_text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:id="@+id/personal_info_image_hint"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_18dp"/>
            <view.CircleImageView
                android:id="@+id/personal_info_image"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/personal_info_image_hint"
                android:layout_centerVertical="true"
                app:border_color="#0000"
                />
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/personal_info_btn_shape"/>
        <RelativeLayout
            android:id="@+id/personal_info_name_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/personal_info_btn_shape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_nickname_text"
                android:textSize="@dimen/main_text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:id="@+id/personal_info_name_hint"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_18dp"/>
            <TextView
                android:id="@+id/personal_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/second_text_color"
                android:textSize="@dimen/main_text_size"
                android:layout_toLeftOf="@id/personal_info_name_hint"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/personal_info_btn_shape"/>
        <RelativeLayout
            android:id="@+id/personal_info_sex_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/personal_info_btn_shape"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_sex_text"
                android:textSize="@dimen/main_text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>
            <ImageView
                android:id="@+id/personal_info_sex_hint"
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_keyboard_arrow_right_black_18dp"/>
            <ImageView
                android:id="@+id/personal_info_sex"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_toLeftOf="@id/personal_info_sex_hint"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp" />
        </RelativeLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/second_button_frame"/>
        <RelativeLayout
            android:id="@+id/personal_info_sign_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/personal_info_btn_shape">
            <TextView
                android:id="@+id/personal_info_sign_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_sign_text"
                android:textSize="@dimen/main_text_size"
                android:layout_marginLeft="20dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/personal_info_sign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000"
                android:layout_toRightOf="@id/personal_info_sign_hint"
                android:layout_alignTop="@id/personal_info_sign_hint"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="45dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/second_text_color"
                android:gravity="top|left"
                android:textSize="@dimen/main_text_size"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>