<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ChatActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/chat_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp">
            <include layout="@layout/layout_toolbar"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/chat_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/chat_edit_layout_shape"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center_vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <ImageButton
                    android:id="@+id/chat_edit_voice_btn"
                    android:layout_width="15dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="12dp"
                    android:src="@mipmap/ic_chat_voice"
                    android:background="#0000"
                    />
                <ImageButton
                    android:id="@+id/chat_edit_function_btn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@id/chat_edit_voice_btn"
                    android:src="@mipmap/ic_chat_add_btn"
                    android:background="#0000"
                    />
                <ImageButton
                    android:id="@+id/chat_edit_send_btn"
                    android:layout_width="46dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/chat_edit_btn_not_shape"
                    android:src="@mipmap/ic_chat_send_btn"/>
                <EditText
                    android:id="@+id/chat_edit_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_toRightOf="@id/chat_edit_function_btn"
                    android:layout_toLeftOf="@id/chat_edit_send_btn"
                    android:background="@drawable/chat_edit_shape"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="3dp"
                    android:textSize="15sp"
                    android:inputType="text"
                    />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/chat_function_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/chat_function_layout_shape"
                android:orientation="horizontal"
                android:weightSum="4"
                android:visibility="gone">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <Button
                        android:id="@+id/chat_function_photo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/chat_function_btn_shape"
                        android:drawableTop="@drawable/ic_insert_photo_black_24dp"
                        android:text="@string/chat_function_img_btn_text"
                        android:textSize="@dimen/second_text_size"
                        android:textColor="@color/second_text_color"
                        android:paddingTop="5dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <Button
                        android:id="@+id/chat_function_video"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/chat_function_btn_shape"
                        android:drawableTop="@drawable/ic_videocam_black_24dp"
                        android:text="@string/chat_function_media_btn_text"
                        android:textSize="@dimen/second_text_size"
                        android:textColor="@color/second_text_color"
                        android:paddingTop="5dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <Button
                        android:id="@+id/chat_function_file"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/chat_function_btn_shape"
                        android:drawableTop="@drawable/ic_insert_drive_file_black_24dp"
                        android:text="@string/chat_function_file_btn_text"
                        android:textSize="@dimen/second_text_size"
                        android:textColor="@color/second_text_color"
                        android:paddingTop="5dp"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <Button
                        android:id="@+id/chat_function_location"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/chat_function_btn_shape"
                        android:drawableTop="@drawable/ic_place_black_24dp"
                        android:text="@string/chat_function_location_btn_text"
                        android:textSize="@dimen/second_text_size"
                        android:textColor="@color/second_text_color"
                        android:paddingTop="5dp"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/chat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/chat_toolbar_layout"
            android:layout_above="@id/chat_edit_layout">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>